# EllipticForest

./: .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  config-petsc-kokkos.sh  config-spack.sh  config.sh  paper.bib  paper.md
.github/workflows/: cmake-multi-platform.yml
data/meshes/: hole.inp  hole.msh
examples/: CMakeLists.txt  README.md
examples/ForestClaw/: CMakeLists.txt
examples/ForestClaw/hello/: CMakeLists.txt  main.cpp
examples/ForestClaw/poisson/: CMakeLists.txt  fclaw_options.ini  hsmooth_mod.mod  main.cpp  poisson_options.h  poisson_user.cpp  poisson_user.h
examples/ForestClaw/poisson/fortran/: poisson_setprob.f90
examples/allen-cahn/: CMakeLists.txt  main.cpp
examples/elliptic/: CMakeLists.txt  main.cpp
examples/elliptic-multiple/: CMakeLists.txt  README.md  main.cpp
examples/elliptic-single/: CMakeLists.txt  main.cpp
examples/heat/: CMakeLists.txt  main.cpp
examples/hello/: CMakeLists.txt  README.md  main.cpp
examples/helmholtz/: CMakeLists.txt  README.md  main.cpp
examples/papers/p1-serial/: CMakeLists.txt  allen-cahn-1.cpp  common.hpp  heat-1.cpp  helmholtz-1.cpp  helmholtz-2.cpp  laplace-1.cpp  poisson-1.cpp  poisson-2.cpp  run_all.sh
examples/patch-solver/: CMakeLists.txt  README.md  main.cpp
examples/poisson/: CMakeLists.txt  README.md  main.cpp
examples/pressure-poisson/: CMakeLists.txt  main.cpp
examples/random/: CMakeLists.txt  adaptive-results.csv  full-results.csv  main.cpp  plots.ipynb
examples/refine-coarsen/: CMakeLists.txt  main.cpp
examples/strong-scaling/: CMakeLists.txt  main.cpp
examples/thermal/: CMakeLists.txt  README.md  main.cpp
examples/toybox/: CMakeLists.txt  main.cpp  options.ini  toybox.ipynb
examples/weak-scaling/: CMakeLists.txt  README.md  main.cpp
src/: AbstractNodeFactory.hpp  CMakeLists.txt  DataCache.cpp  DataCache.hpp  EllipticForest.hpp  EllipticForestApp.cpp  EllipticForestApp.hpp  EllipticProblem.hpp  FISHPACK.cpp  FISHPACK.hpp  ForestClaw.cpp  ForestClaw.hpp  GenericSingleton.cpp  GenericSingleton.hpp  Grid.cpp  Grid.hpp  HPSAlgorithm.cpp  HPSAlgorithm.hpp  Helpers.cpp  Helpers.hpp  InputParser.cpp  InputParser.hpp  Interpolation.cpp  Interpolation.hpp  Logger.cpp  Logger.hpp  MPI.cpp  MPI.hpp  Matrix.cpp  Matrix.hpp  Mesh.hpp  Options.cpp  Options.hpp  P4est.cpp  P4est.hpp  PETSc.cpp  PETSc.hpp  Patch.cpp  Patch.hpp  PatchGrid.cpp  (+21 more)
src/Patches/FiniteVolume/: CMakeLists.txt  FiniteVolume.hpp  FiniteVolumeGrid.cpp  FiniteVolumeGrid.hpp  FiniteVolumeGrip.cpp  FiniteVolumeNodeFactory.cpp  FiniteVolumeNodeFactory.hpp  FiniteVolumePatch.cpp  FiniteVolumePatch.hpp  FiniteVolumeSolver.cpp  FiniteVolumeSolver.hpp
test/: CMakeLists.txt  main.cpp  test_FISHPACK.cpp  test_data_cache.cpp  test_elliptic_forest_app.cpp  test_finite_volume_grid.cpp  test_finite_volume_node_factory.cpp  test_finite_volume_patch.cpp  test_finite_volume_solver.cpp  test_interpolation.cpp  test_matrix.cpp  test_plotting.cpp  test_quadtree.cpp  test_vector.cpp  test_xml_tree.cpp
test/mpi/: CMakeLists.txt  mpi_allgather.cpp  mpi_allgatherv.cpp  mpi_finite_volume_grid.cpp  mpi_matrix.cpp  mpi_matvec.cpp  mpi_quadtree_merge.cpp  mpi_vector.cpp
